Entrega finalizado *Sem os bonus*

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS - Katas 03</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <main id = "resultado"></main>
     <script src="katas3.js"></script>
 </body>
 </html>
